fixed card spacing issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -93,7 +93,7 @@ h6 {
   border-radius: 10px;
   color: white;
   position: absolute;
-  border: 3px solid white;
+  border: 2px solid white;
   top: 4px;
   right: 3px;
   z-index: 2;
@@ -132,7 +132,7 @@ h6 {
 .animeList {
   display: flex;
   flex-wrap: wrap;
-  margin: 32px -8px 0px;
+  margin: 32px -8px 0;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around;
@@ -238,7 +238,7 @@ ul li {
   border-radius: 12px;
 }
 ul .clicked {
-  border: 3px solid rgb(239, 239, 69);
+  border: 3px solid rgb(39, 39, 19);
   background-color: #c9c7bb;
   cursor: pointer;
 }
@@ -248,7 +248,7 @@ ul .clicked {
   overflow: hidden;
   width: 320px;
   height: 450px;
-  margin: 50px auto;
+  margin: 50px 24px;
   background: #2a264f;
   border: 1px solid #1a163f;
   border-radius: 14px;
